# Notion-recurring

./: .bandit.yaml  .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: conftest.py  database.py  migrate.py  server.py  settings.py
src/recurring_event/: api.py  models.py  serializer.py
src/recurring_event/tests/: test_apis.py  test_pydantic_models.py
