[tool.poetry]
name = "notion-recurring"
version = "0.1.0"
description = ""
authors = ["Niloofar Shahbaz <niloofar.shahbaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
tortoise-orm = {extras = ["asyncpg"], version = "^0.19.3"}
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
