[tool.poetry]
name = "notion-recurring"
version = "0.1.0"
description = ""
authors = ["Niloofar Shahbaz <niloofar.shahbaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
pytest = "^7.4.0"
ipython = "^8.14.0"
fastapi = "^0.101.1"
anyio = "^3.7.1"
psycopg2-binary = "^2.9.7"
pony = "^0.7.16"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
